argocd/vaultwarden/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cilium
            k8s-app: cilium-envoy
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: bitwarden.yanello.net
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bitwarden-sync
spec:
  endpointSelector:
    matchLabels:
      app: bitwarden-sync
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vaultwarden
            k8s:app.kubernetes.io/name: vaultwarden
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toFQDNs:
        - matchName: bitwarden.yanello.net
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
